[gd_scene load_steps=2 format=3 uid="uid://cctw5v0l5ypm3"]

[ext_resource type="Script" path="res://ui/login_screen.gd" id="1_5523o"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5523o")

[node name="UserNameField" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.7
anchor_bottom = 0.575

[node name="PasswordField" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.625
anchor_right = 0.7
anchor_bottom = 0.7
select_all_on_focus = true
secret = true

[connection signal="text_submitted" from="UserNameField" to="." method="_on_user_name_field_text_submitted"]
[connection signal="text_submitted" from="PasswordField" to="." method="_on_password_field_text_submitted"]
